Adding tools for text file